--- a/email.html
+++ b/email.html
@@ -52,11 +52,11 @@
                 <td style="background-color: black; padding-top: 50px; padding-bottom: 50px; text-align: center;">
                     <table style="display: inline-block;">
                         <tr>
-                            <td><a href="#"><img src="facebook.png" alt=""></a></td>
-                            <td><a href="#"><img src="linkedin.png" alt=""></a></td>
-                            <td><a href="#"><img src="skype.png" alt=""></a></td>
-                            <td><a href="#"><img src="pinterest.png" alt=""></a></td>
-                            <td><a href="#"><img src="youtube.png" alt=""></a></td>
+                            <td><a href="#"><img src="https://sergiyfit.github.io/denismail/facebook.png" alt=""></a></td>
+                            <td><a href="#"><img src="https://sergiyfit.github.io/denismail/linkedin.png" alt=""></a></td>
+                            <td><a href="#"><img src="https://sergiyfit.github.io/denismail/skype.png" alt=""></a></td>
+                            <td><a href="#"><img src="https://sergiyfit.github.io/denismail/pinterest.png" alt=""></a></td>
+                            <td><a href="#"><img src="https://sergiyfit.github.io/denismail/youtube.png" alt=""></a></td>
                         </tr>
                     </table>
                 </td>
